--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <div id="app">
       <div id="tytul"></div>
       <div id="podTytul"></div>
+      <div id="scroll-area">
       <div id="wrap1">
         <div id="ikonkaZegarka">
           <i class="fa-regular fa-clock fa-1x"></i>  Aktualna godzina i data
@@ -42,7 +43,16 @@
         </div>
         <div id="wyswietlLekcje"></div>
       </div>
+      <div id="wrap4">
+        <div id="ikonkaZegarka">
+          <i class="fa-solid fa-gift"></i>  Do świąt pozostało
+        </div>
+        <!-- <div id="tykajacyZegar"></div> -->
+        <!-- <div id="aktualnaData">19 dni i 19:22:22</div> -->
+        <div id="doSwiatPozostalo"></div>
+      </div>
       <div id="autor"></div>
+    </div>
     </div>
   </body>
 </html>
