--- a/public/index.html
+++ b/public/index.html
@@ -79,28 +79,33 @@
       <div id="scroll-area">
         <div id="wrap1">
           <div id="ikonkaZegarka">
-            <i class="fa-regular fa-clock fa-1x"></i>&nbsp&nbspTime and date
+            <i class="fa-regular fa-clock fa-1x"></i>&nbsp&nbspCurrent time and
+            date
           </div>
+          <hr />
           <div id="tykajacyZegar"></div>
           <div id="aktualnaData"></div>
         </div>
         <div id="root"></div>
         <div id="wrap2">
           <div id="ikonkaZegarka">
-            <i class="fa-regular fa-bell"></i>&nbsp&nbspThe bell rings in
+            <i class="fa-solid fa-bell"></i>&nbsp&nbspThe bell rings in
           </div>
+          <hr />
           <div id="time"></div>
         </div>
         <div id="wrap3">
           <div id="ikonkaZegarka">
             <i class="fa-regular fa-calendar"></i>&nbsp&nbspThe next lesson
           </div>
+          <hr />
           <div id="wyswietlLekcje"></div>
         </div>
         <div id="wrap4">
           <div id="ikonkaZegarka">
             <i class="fa-solid fa-seedling"></i>&nbsp&nbspSpring break begins in
           </div>
+          <hr />
           <div id="doSwiatPozostalo"></div>
         </div>
         <div id="autor"></div>
