--- a/public/index.html
+++ b/public/index.html
@@ -72,43 +72,42 @@
     <title>MyClock</title>
   </head>
   <body>
-    <noscript>Włącz Javascript, aby uruchomić tę aplikację</noscript>
+    <noscript>Enable Javascript to run this application</noscript>
     <div id="app">
-      <div id="tytul"></div>
-      <div id="podTytul"></div>
+      <div id="title"></div>
       <div id="scroll-area">
         <div id="wrap1">
-          <div id="ikonkaZegarka">
+          <div id="iconSymbol">
             <i class="fa-regular fa-clock fa-1x"></i>&nbsp&nbspCurrent time and
             date
           </div>
           <hr />
-          <div id="tykajacyZegar"></div>
-          <div id="aktualnaData"></div>
+          <div id="tickingClock"></div>
+          <div id="currentDate"></div>
         </div>
         <div id="root"></div>
         <div id="wrap2">
-          <div id="ikonkaZegarka">
+          <div id="iconSymbol">
             <i class="fa-solid fa-bell"></i>&nbsp&nbspThe bell rings in
           </div>
           <hr />
           <div id="time"></div>
         </div>
         <div id="wrap3">
-          <div id="ikonkaZegarka">
+          <div id="iconSymbol">
             <i class="fa-regular fa-calendar"></i>&nbsp&nbspThe next lesson
           </div>
           <hr />
-          <div id="wyswietlLekcje"></div>
+          <div id="showLesson"></div>
         </div>
         <div id="wrap4">
-          <div id="ikonkaZegarka">
+          <div id="iconSymbol">
             <i class="fa-solid fa-seedling"></i>&nbsp&nbspSpring break begins in
           </div>
           <hr />
-          <div id="doSwiatPozostalo"></div>
+          <div id="timeTillHolidays"></div>
         </div>
-        <div id="autor"></div>
+        <div id="author"></div>
       </div>
     </div>
   </body>
