--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
         </div>
         <div id="wrap4">
           <div id="iconSymbol">
-            <i class="fa-solid fa-seedling"></i>&nbsp&nbspSpring break begins in
+            <i class="fa-solid fa-seedling"></i>&nbsp&nbspBear & Sussages Time
           </div>
           <hr />
           <div id="timeTillHolidays"></div>
