--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
         </div>
         <div id="wrap4">
           <div id="iconSymbol">
-            <i class="fa-solid fa-sun"></i>&nbsp&nbspFinals week
+            <i class="fa-solid fa-computer"></i>&nbsp&nbspFinals week
           </div>
           <hr />
           <div id="timeTillHolidays"></div>
