--- a/public/index.html
+++ b/public/index.html
@@ -88,21 +88,21 @@
         <div id="root"></div>
         <div id="wrap2">
           <div id="iconSymbol">
-            <i class="fa-solid fa-bell"></i>&nbsp&nbspThe bell rings in
+            <i class="fa-solid fa-bell"></i>&nbsp&nbspBell rings in
           </div>
           <hr />
           <div id="time"></div>
         </div>
         <div id="wrap3">
           <div id="iconSymbol">
-            <i class="fa-regular fa-calendar"></i>&nbsp&nbspThe next lesson
+            <i class="fa-regular fa-calendar"></i>&nbsp&nbspNext lesson
           </div>
           <hr />
           <div id="showLesson"></div>
         </div>
         <div id="wrap4">
           <div id="iconSymbol">
-            <i class="fa-solid fa-gift"></i>&nbsp&nbspWinter break
+            <i class="fa-solid fa-champagne-glasses"></i>&nbsp&nbspThe End
           </div>
           <hr />
           <div id="timeTillHolidays"></div>
